# Maelstrom

./: .gitmodules  CMakeLists.txt  README.md
Data/UI/: gameover.xml  kidmode.xml  main.xml
Xcode/Maelstrom.xcodeproj/: project.pbxproj
android-project/app/: build.gradle
game/: game.cpp  gameover.cpp  lobby.cpp  main.cpp  netplay.cpp  objects.cpp  objects.h  player.cpp  player.h  replay.h
maclib/: Mac_FontServ.cpp
macres/: macres.cpp
screenlib/: SDL_FrameBuf.cpp  SDL_FrameBuf.h  UIArea.cpp
store/steam/: app_build.vdf
utils/: files.c
